Markbook: fix alignment issues on markbook table

--- a/modules/Markbook/css/module.css
+++ b/modules/Markbook/css/module.css
@@ -84,6 +84,7 @@ th.dataColumn {
     min-width: 140px;
     position: relative;
     vertical-align: top;
+    height: 130px;
 }
 
 .marksColumn .columnActions {
